# GPrompt

./: README.md  flake.nix  meson.build  shell.nix
src/: background.vala  gprompt.gresource.xml  main.vala  meson.build  prompt.vala  style.css  window.vala
src/ui/: meson.build  window.blp
